--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage" : "https://melroh629.github.io/tsx-project",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "format": "prettier --write --cache .",
-	  "lint": "eslint src/**/*.{ts,tsx} --fix",
-    "preview": "vite preview"
+    "lint": "eslint src/**/*.{ts,tsx} --fix",
+    "preview": "vite preview", 
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -28,6 +31,7 @@
     "eslint-plugin-react": "^7.33.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "gh-pages": "^6.0.0",
     "prettier": "^3.0.1",
     "typescript": ">=4.7",
     "vite": "^4.4.5"
