--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint src/**/*.{ts,tsx} --fix",
     "preview": "vite preview", 
     "predeploy": "yarn build",
-    "deploy": "gh-pages -d build"
+    "deploy": "github-pages -d build"
   },
   "dependencies": {
     "react": "^18.2.0",
