--- a/package.json
+++ b/package.json
@@ -3,19 +3,23 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage" : "https://melroh629.github.io/tsx-project",
+  "homepage": "https://melroh629.github.io/tsx-project",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "format": "prettier --write --cache .",
     "lint": "eslint src/**/*.{ts,tsx} --fix",
-    "preview": "vite preview", 
+    "preview": "vite preview",
     "predeploy": "yarn build",
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.32.6",
+    "antd": "^5.8.3",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "styled-components": "^6.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
