--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "format": "prettier --write --cache .",
     "lint": "eslint src/**/*.{ts,tsx} --fix",
     "preview": "vite preview",
-    "predeploy": "yarn build",
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@tanstack/react-query": "^4.32.6",
+    "@tanstack/react-query-devtools": "^4.32.6",
     "antd": "^5.8.3",
     "axios": "^1.4.0",
     "react": "^18.2.0",
@@ -22,11 +22,12 @@
     "styled-components": "^6.0.7"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^4.32.5",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
-    "@vitejs/plugin-react": "^4.0.3",
+    "@vitejs/plugin-react": "^4.0.4",
     "eslint": ">=8.0.0",
     "eslint-config-xo": "^0.43.1",
     "eslint-config-xo-typescript": "^1.0.1",
