--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,14 +5,16 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
 
     /* Bundler mode */
-    "moduleResolution": "Bundler",
-    "allowImportingTsExtensions": true,
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
+    "jsxImportSource": "react",
 
     /* Linting */
     "strict": true,
@@ -21,7 +23,6 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": [ 
-    ".eslintrc.cjs",
     "src/**/*.ts",
     "src/**/*.tsx",
     "vite.config.ts"],
