--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "deploy": "yarn build && gh-pages -d build"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.5",
     "@tanstack/react-query": "^4.32.6",
     "@tanstack/react-query-devtools": "^4.32.6",
     "antd": "^5.8.3",
